# Pico-s3

./: README.md
file-storage-api/: Cargo.toml
file-storage-api/src/: file_api.rs  main.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  util.ts
