[package]
name = "file-storage-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.2.0", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
async-graphql = { version="2.9.9", features=["uuid"] }
slab = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
xdg = "2.4.0"
base64 = "0.13.0"
uuid = "0.8.2"
serde_json = "1.0"
serde = "1.0"
rusqlite = { version = "0.26.1", features = ["chrono", "uuid"] }
